Added LiDAR sensor

--- a/QuadrupedControl.ipynb
+++ b/QuadrupedControl.ipynb
@@ -16,7 +16,17 @@
     "import torch\n",
     "import pybullet as p\n",
     "import pybullet_data\n",
-    "import time"
+    "import time\n",
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PI = math.pi"
    ]
   },
   {
@@ -28,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,21 +47,49 @@
     "p.setGravity(0, 0, -9.81)   # set gravity\n",
     "\n",
     "# Load models\n",
-    "planeID = p.loadURDF('plane.urdf')\n",
+    "planeId = p.loadURDF('plane.urdf')\n",
     "\n",
     "init_pos = [0, 0, 0.005]\n",
-    "init_orientation = p.getQuaternionFromEuler([0, 0, 0])\n",
-    "robotID = p.loadURDF('quadruped/quadruped.urdf', basePosition=init_pos, baseOrientation=init_orientation)"
+    "init_orientation = p.getQuaternionFromEuler([0, 0, PI])\n",
+    "robotId = p.loadURDF('quadruped/quadruped.urdf', basePosition=init_pos, baseOrientation=init_orientation)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Disconnect from client\n",
-    "p.disconnect()"
+    "from scripts.lidar import lidar_sim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p.setJointMotorControl2(robotId, 1, controlMode=p.POSITION_CONTROL, targetPosition=PI/4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lidar_idx = p.getNumJoints(robotId) - 1\n",
+    "num_rays = 45\n",
+    "ray_length = 10\n",
+    "time.sleep(2)\n",
+    "\n",
+    "SIM_LENGTH = 1\n",
+    "for _ in range(SIM_LENGTH):\n",
+    "    \n",
+    "    data = lidar_sim(robotId, lidar_idx)\n",
+    "    \n",
+    "    p.stepSimulation()\n",
+    "    time.sleep(1/240)"
    ]
   },
   {
