Create SAC Agent + ReplayBuffer

--- a/QuadrupedControl.ipynb
+++ b/QuadrupedControl.ipynb
@@ -26,6 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# DEFINE VARIABLES AND HYPERPARAMETERS\n",
     "PI = math.pi"
    ]
   },
@@ -50,7 +51,7 @@
     "planeId = p.loadURDF('plane.urdf')\n",
     "\n",
     "init_pos = [0, 0, 0.005]\n",
-    "init_orientation = p.getQuaternionFromEuler([0, 0, PI])\n",
+    "init_orientation = p.getQuaternionFromEuler([0, 0, 0])\n",
     "robotId = p.loadURDF('quadruped/quadruped.urdf', basePosition=init_pos, baseOrientation=init_orientation)"
    ]
   },
@@ -74,9 +75,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "360\n"
+     ]
+    }
+   ],
    "source": [
     "lidar_idx = p.getNumJoints(robotId) - 1\n",
     "num_rays = 45\n",
@@ -90,6 +99,15 @@
     "    \n",
     "    p.stepSimulation()\n",
     "    time.sleep(1/240)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p.disconnect()"
    ]
   },
   {
