--- a/QuadrupedControl.ipynb
+++ b/QuadrupedControl.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,17 +17,38 @@
     "import pybullet as p\n",
     "import pybullet_data\n",
     "import time\n",
-    "import math"
+    "import math\n",
+    "\n",
+    "from scripts.lidar import lidar_sim\n",
+    "from scripts.agent import AgentSAC"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# DEFINE VARIABLES AND HYPERPARAMETERS\n",
-    "PI = math.pi"
+    "PI = math.pi\n",
+    "NUM_EPISODES = 1000\n",
+    "MAX_STEPS_PER_EPISODE = 1000    # TODO try to set it up so each episode takes one minute"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create Agent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "agent = AgentSAC(state_dim=None, action_dim=12) # TODO calculate state_dim"
    ]
   },
   {
@@ -39,83 +60,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "physicsClient = p.connect(p.GUI)\n",
     "p.setAdditionalSearchPath(pybullet_data.getDataPath())\n",
-    "p.setGravity(0, 0, -9.81)   # set gravity\n",
-    "\n",
-    "# Load models\n",
-    "planeId = p.loadURDF('plane.urdf')\n",
-    "\n",
-    "init_pos = [0, 0, 0.005]\n",
-    "init_orientation = p.getQuaternionFromEuler([0, 0, 0])\n",
-    "robotId = p.loadURDF('quadruped/quadruped.urdf', basePosition=init_pos, baseOrientation=init_orientation)"
+    "p.setGravity(0, 0, -9.81)   # set gravity"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from scripts.lidar import lidar_sim"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "p.setJointMotorControl2(robotId, 1, controlMode=p.POSITION_CONTROL, targetPosition=PI/4)"
+    "Training Loop"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "360\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "lidar_idx = p.getNumJoints(robotId) - 1\n",
-    "num_rays = 45\n",
-    "ray_length = 10\n",
-    "time.sleep(2)\n",
-    "\n",
-    "SIM_LENGTH = 1\n",
-    "for _ in range(SIM_LENGTH):\n",
-    "    \n",
-    "    data = lidar_sim(robotId, lidar_idx)\n",
-    "    \n",
-    "    p.stepSimulation()\n",
-    "    time.sleep(1/240)"
+    "# EXAMPLE: Send robot command\n",
+    "robotId, num_joints = None, None\n",
+    "p.setJointMotorControlArray(robotId, range(num_joints), controlMode=p.POSITION_CONTROL, targetPositions=([0] * num_joints))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for episode in range(NUM_EPISODES):\n",
+    "    # Reset simulation and upload models\n",
+    "    p.resetSimulation()\n",
+    "    \n",
+    "    # Load Plane model\n",
+    "    planeId = p.loadURDF('plane.urdf')\n",
+    "\n",
+    "    # Load Robot Model\n",
+    "    init_pos = [0, 0, 0.48]\n",
+    "    init_orientation = p.getQuaternionFromEuler([0, 0, 0])\n",
+    "    robotId = p.loadURDF('quadruped/quadruped.urdf', basePosition=init_pos, baseOrientation=init_orientation)\n",
+    "    num_joints = p.getNumJoints(robotId) - 1 # One less for LiDAR\n",
+    "    \n",
+    "    # Get LiDAR idx\n",
+    "    lidar_idx = p.getNumJoints(robotId) - 1\n",
+    "    \n",
+    "    # get state\n",
+    "    # TODO define a function to collect the state\n",
+    "    state = None\n",
+    "    \n",
+    "    total_reward = 0\n",
+    "    done = False\n",
+    "    for step in range(MAX_STEPS_PER_EPISODE):\n",
+    "        \n",
+    "        # Select and apply action\n",
+    "        action = None   # TODO add select action logic\n",
+    "        p.setJointMotorControlArray(robotId, range(num_joints), controlMode=p.POSITION_CONTROL, targetPositions=action)\n",
+    "        \n",
+    "        # Step through the simulation\n",
+    "        p.stepSimulation()\n",
+    "        \n",
+    "        # Get next state\n",
+    "        # TODO define a function to collect the state\n",
+    "        next_state = None\n",
+    "        \n",
+    "        # Calculate reward\n",
+    "        # TODO define a function to calculate the reward\n",
+    "        reward = None\n",
+    "        \n",
+    "        # Check if done\n",
+    "        # TODO define a function to check if done\n",
+    "        done = None\n",
+    "        \n",
+    "        # Store transition into Replay Buffer\n",
+    "        agent.buffer.push(state, action, next_state, reward, done)\n",
+    "        \n",
+    "        # Optimize networks\n",
+    "        if len(agent.buffer.memory) >= agent.batch_size:\n",
+    "            # TODO add optimize functions\n",
+    "            pass\n",
+    "        \n",
+    "        # Transition into next state\n",
+    "        state = next_state\n",
+    "        total_reward += reward\n",
+    "        \n",
+    "        # Break if done\n",
+    "        if done:\n",
+    "            break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "p.disconnect()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
