Model Update + Training Loop Update

--- a/QuadrupedControl.ipynb
+++ b/QuadrupedControl.ipynb
@@ -9,6 +9,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -20,7 +30,8 @@
     "import math\n",
     "\n",
     "from scripts.lidar import lidar_sim\n",
-    "from scripts.agent import AgentSAC"
+    "from scripts.agent import AgentSAC\n",
+    "from scripts.utils import get_state, get_spawn, get_goal"
    ]
   },
   {
@@ -32,7 +43,9 @@
     "# DEFINE VARIABLES AND HYPERPARAMETERS\n",
     "PI = math.pi\n",
     "NUM_EPISODES = 1000\n",
-    "MAX_STEPS_PER_EPISODE = 1000    # TODO try to set it up so each episode takes one minute"
+    "ACTION_DURATION = 0.2\n",
+    "MAX_EPISODE_TIME = 30\n",
+    "MAX_STEPS_PER_EPISODE = int(MAX_EPISODE_TIME / ACTION_DURATION)"
    ]
   },
   {
@@ -44,11 +57,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "agent = AgentSAC(state_dim=None, action_dim=12) # TODO calculate state_dim"
+    "agent = AgentSAC(state_dim=386, action_dim=12)"
    ]
   },
   {
@@ -60,20 +73,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "physicsClient = p.connect(p.GUI)\n",
     "p.setAdditionalSearchPath(pybullet_data.getDataPath())\n",
-    "p.setGravity(0, 0, -9.81)   # set gravity"
+    "p.setGravity(0, 0, -9.81)   # set gravity\n",
+    "\n",
+    "# Load Plane model\n",
+    "planeId = p.loadURDF('plane.urdf')\n",
+    "\n",
+    "# Load Robot Model\n",
+    "init_pos = [0, 0, 0.48]\n",
+    "init_orientation = p.getQuaternionFromEuler([0, 0, 0])\n",
+    "robotId = p.loadURDF('quadruped/quadruped.urdf', basePosition=init_pos, baseOrientation=init_orientation)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Training Loop"
+    "a = get_state(robotId, (1, 1))"
    ]
   },
   {
@@ -101,32 +124,38 @@
     "    planeId = p.loadURDF('plane.urdf')\n",
     "\n",
     "    # Load Robot Model\n",
-    "    init_pos = [0, 0, 0.48]\n",
-    "    init_orientation = p.getQuaternionFromEuler([0, 0, 0])\n",
+    "    init_x, init_y, init_z_orientation = get_spawn()\n",
+    "    init_pos = [init_x, init_y, 0.48] \n",
+    "    init_orientation = p.getQuaternionFromEuler([0, 0, init_z_orientation])\n",
     "    robotId = p.loadURDF('quadruped/quadruped.urdf', basePosition=init_pos, baseOrientation=init_orientation)\n",
     "    num_joints = p.getNumJoints(robotId) - 1 # One less for LiDAR\n",
     "    \n",
     "    # Get LiDAR idx\n",
     "    lidar_idx = p.getNumJoints(robotId) - 1\n",
     "    \n",
+    "    # get goal\n",
+    "    goal = get_goal(init_x, init_y)\n",
+    "    \n",
     "    # get state\n",
-    "    # TODO define a function to collect the state\n",
-    "    state = None\n",
+    "    state = get_state(robotId, goal)\n",
     "    \n",
     "    total_reward = 0\n",
     "    done = False\n",
     "    for step in range(MAX_STEPS_PER_EPISODE):\n",
     "        \n",
     "        # Select and apply action\n",
-    "        action = None   # TODO add select action logic\n",
-    "        p.setJointMotorControlArray(robotId, range(num_joints), controlMode=p.POSITION_CONTROL, targetPositions=action)\n",
+    "        action, log_prob, _ = AgentSAC.Actor.sample(state)\n",
+    "        action_ = action.detach().cpu().numpy()\n",
+    "        p.setJointMotorControlArray(robotId, range(num_joints), controlMode=p.POSITION_CONTROL, targetPositions=action_)\n",
     "        \n",
     "        # Step through the simulation\n",
-    "        p.stepSimulation()\n",
+    "        start_time = time.time()\n",
+    "        while time.time() - start_time < ACTION_DURATION:\n",
+    "            p.stepSimulation()\n",
+    "            time.sleep(1/240.0)\n",
     "        \n",
     "        # Get next state\n",
-    "        # TODO define a function to collect the state\n",
-    "        next_state = None\n",
+    "        next_state = get_state(robotId, goal)\n",
     "        \n",
     "        # Calculate reward\n",
     "        # TODO define a function to calculate the reward\n",
@@ -141,8 +170,17 @@
     "        \n",
     "        # Optimize networks\n",
     "        if len(agent.buffer.memory) >= agent.batch_size:\n",
-    "            # TODO add optimize functions\n",
-    "            pass\n",
+    "            states, actions, rewards, next_states, dones = agent.buffer.sample(agent.batch_size)\n",
+    "            \n",
+    "            # Optimize Critic\n",
+    "            agent.optimize_critic(states, actions, rewards, next_states, dones)\n",
+    "            \n",
+    "            # Optimize Actor\n",
+    "            agent.optimize_actor(states)\n",
+    "            \n",
+    "            # Update Target Critic\n",
+    "            agent.update_target()\n",
+    "                        \n",
     "        \n",
     "        # Transition into next state\n",
     "        state = next_state\n",
@@ -155,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
