--- a/QuadrupedControl.ipynb
+++ b/QuadrupedControl.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,23 +29,24 @@
     "import time\n",
     "import math\n",
     "\n",
-    "from scripts.lidar import lidar_sim\n",
     "from scripts.agent import AgentSAC\n",
-    "from scripts.utils import get_state, get_spawn, get_goal"
+    "from scripts.utils import get_state, get_spawn, get_goal, get_reward_done"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# DEFINE VARIABLES AND HYPERPARAMETERS\n",
     "PI = math.pi\n",
-    "NUM_EPISODES = 1000\n",
+    "NUM_EPISODES = 500\n",
     "ACTION_DURATION = 0.2\n",
     "MAX_EPISODE_TIME = 30\n",
-    "MAX_STEPS_PER_EPISODE = int(MAX_EPISODE_TIME / ACTION_DURATION)"
+    "MAX_STEPS_PER_EPISODE = int(MAX_EPISODE_TIME / ACTION_DURATION)\n",
+    "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
    ]
   },
   {
@@ -61,7 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "agent = AgentSAC(state_dim=386, action_dim=12)"
+    "agent = AgentSAC(state_dim=386, action_dim=12).to(device)"
    ]
   },
   {
@@ -78,36 +79,7 @@
    "outputs": [],
    "source": [
     "physicsClient = p.connect(p.GUI)\n",
-    "p.setAdditionalSearchPath(pybullet_data.getDataPath())\n",
-    "p.setGravity(0, 0, -9.81)   # set gravity\n",
-    "\n",
-    "# Load Plane model\n",
-    "planeId = p.loadURDF('plane.urdf')\n",
-    "\n",
-    "# Load Robot Model\n",
-    "init_pos = [0, 0, 0.48]\n",
-    "init_orientation = p.getQuaternionFromEuler([0, 0, 0])\n",
-    "robotId = p.loadURDF('quadruped/quadruped.urdf', basePosition=init_pos, baseOrientation=init_orientation)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = get_state(robotId, (1, 1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# EXAMPLE: Send robot command\n",
-    "robotId, num_joints = None, None\n",
-    "p.setJointMotorControlArray(robotId, range(num_joints), controlMode=p.POSITION_CONTROL, targetPositions=([0] * num_joints))"
+    "p.setAdditionalSearchPath(pybullet_data.getDataPath())"
    ]
   },
   {
@@ -119,6 +91,7 @@
     "for episode in range(NUM_EPISODES):\n",
     "    # Reset simulation and upload models\n",
     "    p.resetSimulation()\n",
+    "    p.setGravity(0, 0, -9.8)    # set gravity\n",
     "    \n",
     "    # Load Plane model\n",
     "    planeId = p.loadURDF('plane.urdf')\n",
@@ -128,6 +101,7 @@
     "    init_pos = [init_x, init_y, 0.48] \n",
     "    init_orientation = p.getQuaternionFromEuler([0, 0, init_z_orientation])\n",
     "    robotId = p.loadURDF('quadruped/quadruped.urdf', basePosition=init_pos, baseOrientation=init_orientation)\n",
+    "    print(f'placed robot in: {init_x}, {init_y}')\n",
     "    num_joints = p.getNumJoints(robotId) - 1 # One less for LiDAR\n",
     "    \n",
     "    # Get LiDAR idx\n",
@@ -135,6 +109,8 @@
     "    \n",
     "    # get goal\n",
     "    goal = get_goal(init_x, init_y)\n",
+    "    print(f'goal set to: {goal[0], goal[1]}')\n",
+    "    time.sleep(1.0)\n",
     "    \n",
     "    # get state\n",
     "    state = get_state(robotId, goal)\n",
@@ -142,9 +118,9 @@
     "    total_reward = 0\n",
     "    done = False\n",
     "    for step in range(MAX_STEPS_PER_EPISODE):\n",
-    "        \n",
+    "\n",
     "        # Select and apply action\n",
-    "        action, log_prob, _ = AgentSAC.Actor.sample(state)\n",
+    "        action, log_prob, _ = agent.Actor.sample(state)\n",
     "        action_ = action.detach().cpu().numpy()\n",
     "        p.setJointMotorControlArray(robotId, range(num_joints), controlMode=p.POSITION_CONTROL, targetPositions=action_)\n",
     "        \n",
@@ -157,13 +133,8 @@
     "        # Get next state\n",
     "        next_state = get_state(robotId, goal)\n",
     "        \n",
-    "        # Calculate reward\n",
-    "        # TODO define a function to calculate the reward\n",
-    "        reward = None\n",
-    "        \n",
-    "        # Check if done\n",
-    "        # TODO define a function to check if done\n",
-    "        done = None\n",
+    "        # Calculate reward and done\n",
+    "        reward, done = get_reward_done(robotId, goal)\n",
     "        \n",
     "        # Store transition into Replay Buffer\n",
     "        agent.buffer.push(state, action, next_state, reward, done)\n",
@@ -188,16 +159,9 @@
     "        \n",
     "        # Break if done\n",
     "        if done:\n",
-    "            break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "p.disconnect()"
+    "            break\n",
+    "        \n",
+    "        "
    ]
   }
  ],
